data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4384.wast
;; 3. **Test 3: Correct Type but Invalid Operand Stack**:    - **Description**: Use `call_indirect` with a correct function type but insufficient operands on the stack.    - **Constraint Checked**: Checks operand stack handling requirements for `call_indirect`.    - **CFG Relation**: Evaluates if the CFG correctly models operand stack requirements, ensuring accurate function invocation or proper traps.

(assert_invalid
  (module
    (type (func (param i32 f64) (result i32)))
    (table funcref (elem (i32.const 0)))
    (func (result i32)
      (call_indirect (type 0) (i32.const 0))  ;; Incorrect; missing operands i32 and f64
    )
  )
  "type mismatch"
)